Add Initial AppsettingFile
Add Initial AppsettingFile

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,17 @@
 /Wkkim.Blog.Web/bin/Release/net8.0/appsettings.json
 /Wkkim.Blog.Web/bin/Release/net7.0/appsettings.json
 /Wkkim.Blog.Web/appsettings.json
+Wkkim.Blog.Web/obj/Debug/net7.0/.NETCoreApp,Version=v7.0.AssemblyAttributes.cs
+Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.AssemblyInfo.cs
+Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.AssemblyInfoInputs.cache
+Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.assets.cache
+Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.csproj.AssemblyReference.cache
+Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.GeneratedMSBuildEditorConfig.editorconfig
+Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.GlobalUsings.g.cs
+Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.RazorAssemblyInfo.cache
+Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.RazorAssemblyInfo.cs
+Wkkim.Blog.Web/obj/project.assets.json
+Wkkim.Blog.Web/obj/project.nuget.cache
+Wkkim.Blog.Web/obj/Wkkim.Blog.Web.csproj.nuget.dgspec.json
+Wkkim.Blog.Web/obj/Wkkim.Blog.Web.csproj.nuget.g.props
+Wkkim.Blog.Web/obj/Wkkim.Blog.Web.csproj.nuget.g.targets
