Update Ignore Files
Update Ignore Files

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,89 @@ Wkkim.Blog.Web/obj/project.nuget.cache
 Wkkim.Blog.Web/obj/Wkkim.Blog.Web.csproj.nuget.dgspec.json
 Wkkim.Blog.Web/obj/Wkkim.Blog.Web.csproj.nuget.g.props
 Wkkim.Blog.Web/obj/Wkkim.Blog.Web.csproj.nuget.g.targets
+Wkkim.Blog.Web/appsettings.json
+Wkkim.Blog.Web/bin/Debug/net7.0/appsettings.Development.json
+Wkkim.Blog.Web/bin/Debug/net7.0/Azure.Core.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Azure.Identity.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/CloudinaryDotNet.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Humanizer.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.AspNetCore.Cryptography.Internal.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.AspNetCore.Cryptography.KeyDerivation.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.AspNetCore.Identity.EntityFrameworkCore.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.Bcl.AsyncInterfaces.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.Data.SqlClient.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.EntityFrameworkCore.Abstractions.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.EntityFrameworkCore.Design.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.EntityFrameworkCore.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.EntityFrameworkCore.Relational.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.EntityFrameworkCore.SqlServer.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.Extensions.DependencyModel.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.Extensions.Identity.Core.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.Extensions.Identity.Stores.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.Extensions.Options.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.Identity.Client.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.Identity.Client.Extensions.Msal.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.IdentityModel.Abstractions.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.IdentityModel.JsonWebTokens.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.IdentityModel.Logging.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.IdentityModel.Protocols.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.IdentityModel.Protocols.OpenIdConnect.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.IdentityModel.Tokens.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.SqlServer.Server.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Microsoft.Win32.SystemEvents.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Mono.TextTemplating.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/MySqlConnector.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Newtonsoft.Json.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Pomelo.EntityFrameworkCore.MySql.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/runtimes/unix/lib/net6.0/Microsoft.Data.SqlClient.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/runtimes/unix/lib/net6.0/System.Drawing.Common.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/runtimes/win-arm/native/Microsoft.Data.SqlClient.SNI.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/runtimes/win-arm64/native/Microsoft.Data.SqlClient.SNI.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/runtimes/win-x64/native/Microsoft.Data.SqlClient.SNI.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/runtimes/win-x86/native/Microsoft.Data.SqlClient.SNI.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/runtimes/win/lib/net6.0/Microsoft.Data.SqlClient.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/runtimes/win/lib/net6.0/Microsoft.Win32.SystemEvents.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/runtimes/win/lib/net6.0/System.Drawing.Common.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/runtimes/win/lib/net6.0/System.Runtime.Caching.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/runtimes/win/lib/net6.0/System.Security.Cryptography.ProtectedData.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/runtimes/win/lib/net6.0/System.Windows.Extensions.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/System.CodeDom.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/System.Configuration.ConfigurationManager.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/System.Drawing.Common.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/System.IdentityModel.Tokens.Jwt.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/System.Memory.Data.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/System.Runtime.Caching.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/System.Security.Cryptography.ProtectedData.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/System.Security.Permissions.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/System.Windows.Extensions.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Wkkim.Blog.Web.deps.json
+Wkkim.Blog.Web/bin/Debug/net7.0/Wkkim.Blog.Web.dll
+Wkkim.Blog.Web/bin/Debug/net7.0/Wkkim.Blog.Web.exe
+Wkkim.Blog.Web/bin/Debug/net7.0/Wkkim.Blog.Web.pdb
+Wkkim.Blog.Web/bin/Debug/net7.0/Wkkim.Blog.Web.runtimeconfig.json
+Wkkim.Blog.Web/bin/Debug/net7.0/Wkkim.Blog.Web.staticwebassets.runtime.json
+Wkkim.Blog.Web/obj/Debug/net7.0/ApiEndpoints.json
+Wkkim.Blog.Web/obj/Debug/net7.0/apphost.exe
+Wkkim.Blog.Web/obj/Debug/net7.0/ref/Wkkim.Blog.Web.dll
+Wkkim.Blog.Web/obj/Debug/net7.0/refint/Wkkim.Blog.Web.dll
+Wkkim.Blog.Web/obj/Debug/net7.0/scopedcss/bundle/Wkkim.Blog.Web.styles.css
+Wkkim.Blog.Web/obj/Debug/net7.0/scopedcss/projectbundle/Wkkim.Blog.Web.bundle.scp.css
+Wkkim.Blog.Web/obj/Debug/net7.0/scopedcss/Views/Shared/_Layout.cshtml.rz.scp.css
+Wkkim.Blog.Web/obj/Debug/net7.0/staticwebassets.build.json
+Wkkim.Blog.Web/obj/Debug/net7.0/staticwebassets.development.json
+Wkkim.Blog.Web/obj/Debug/net7.0/staticwebassets.pack.json
+Wkkim.Blog.Web/obj/Debug/net7.0/staticwebassets/msbuild.build.Wkkim.Blog.Web.props
+Wkkim.Blog.Web/obj/Debug/net7.0/staticwebassets/msbuild.buildMultiTargeting.Wkkim.Blog.Web.props
+Wkkim.Blog.Web/obj/Debug/net7.0/staticwebassets/msbuild.buildTransitive.Wkkim.Blog.Web.props
+Wkkim.Blog.Web/obj/Debug/net7.0/staticwebassets/msbuild.Wkkim.Blog.Web.Microsoft.AspNetCore.StaticWebAssets.props
+Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Bl.0AD85A8A.Up2Date
+Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.csproj.BuildWithSkipAnalyzers
+Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.csproj.CoreCompileInputs.cache
+Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.csproj.FileListAbsolute.txt
+Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.dll
+Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.genruntimeconfig.cache
+Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.MvcApplicationPartsAssemblyInfo.cache
+Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.pdb
+Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.sourcelink.json
+Wkkim.Blog.Web/appsettings.json
+Wkkim.Blog.Web/appsettings.json
