--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,4 @@ Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.genruntimeconfig.cache
 Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.MvcApplicationPartsAssemblyInfo.cache
 Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.pdb
 Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.sourcelink.json
+/Wkkim.Blog.Web/obj
