Remove Bin folder
Remove Bin folder

--- a/.gitignore
+++ b/.gitignore
@@ -107,3 +107,4 @@ Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.MvcApplicationPartsAssemblyInfo.c
 Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.pdb
 Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.sourcelink.json
 /Wkkim.Blog.Web/obj
+/Wkkim.Blog.Web/bin
