Modify Image Controller
modify not to use cloudynaryimage Lib.
image will be uploaded on wwwroot/upload path.
if fail to Add blogpost. image and DB data will be deleted by controller.

--- a/Wkkim.Blog.Web/Wkkim.Blog.Web.csproj
+++ b/Wkkim.Blog.Web/Wkkim.Blog.Web.csproj
@@ -20,6 +20,7 @@
 
   <ItemGroup>
     <PackageReference Include="CloudinaryDotNet" Version="1.26.2" />
+    <PackageReference Include="DevExpress.Xpo" Version="23.2.6" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="7.0.20" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="7.0.20" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.20" />
@@ -32,9 +33,23 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="Wkkim.Blog.Connection">
-      <HintPath>Lib\Wkkim.Blog.Connection.dll</HintPath>
-    </Reference>
+    <Content Update="wwwroot\image\artificial-intelligence.svg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\image\c-sharp-c.svg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\image\python.svg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Update="wwwroot\image\sql-database-sql-azure.svg">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+    <Folder Include="wwwroot\uploads\" />
   </ItemGroup>
 
 </Project>
