Image Upload Feature Update
Removed the image upload feature (modified to use Cloudinary instead)
Deleted image-related tables from the DB context
Removed classes related to image uploading
Modified some HTML tags when viewing the blog.
→ If a coll-xxx-xxx string is detected, change it to collapsible content (for organizing graduate school-related content).

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,4 @@ Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.pdb
 Wkkim.Blog.Web/obj/Debug/net7.0/Wkkim.Blog.Web.sourcelink.json
 /Wkkim.Blog.Web/obj
 /Wkkim.Blog.Web/bin
+Wkkim.Blog.Web/Properties/PublishProfiles/registry.hub.docker.com_wkkim921111.pubxml.user
